[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "payload_pipeline"
version = "0.1.0"
description = "Marketplace payload builder — game-specific listing content and marketplace payloads"
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "opencv-python",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["payload_pipeline*"]

[tool.setuptools.package-data]
payload_pipeline = [
    "games/*/account/resources/*.json",
    "games/*/account/resources/media/*.png",
    "games/*/account/resources/media/assets/*.png",
    "games/*/account/resources/image_map/*/*.png",
    "shared/resources/*.ttf",
]
